test/fail/undeclared_var.rlang
/* undeclared: q */
int p := q;
